<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dream_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dream_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            tools:text="Dream" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dream_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@color/material_dynamic_neutral30"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dream_title_hint"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize"
                    tools:text="Dream Title" />

                <TextView
                    android:id="@+id/last_updated_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="Last updated date at time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/fulfilled_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fulfilled_checkbox"
                        tools:text="Fulfilled" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/deferred_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deferred_checkbox"
                        tools:text="Deferred" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entries_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entries_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            tools:text="Entries" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dream_entry_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/list_item_dream_entry" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_reflection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/add_reflection_button"
            android:focusable="true"
            android:src="@drawable/ic_add"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@color/teal_700"
            app:tint="@color/white" />

    </LinearLayout>

</LinearLayout>